<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cancel">Cancel</string>
    <string name="reg_ape">Surname</string>
    <string name="reg_name">Name</string>
    <string name="reg_passC">Password Confirmation</string>
    <string name="name">Name</string>
    <string name="hint_apellidos">Surname</string>
    <string name="hint_confiPassword">Password Confirmation</string>
    <string name="hint_email" translatable="false">E-mail</string>
    <string name="hint_nombre">Name</string>
    <string name="hint_password">Password</string>
    <string name="label_cancelar">Cancel</string>
    <string name="label_login">Enter</string>
    <string name="label_logout">Logout</string>
    <string name="label_ok" translatable="false">Ok!</string>
    <string name="label_OkRegister">Register</string>
    <string name="label_register">Register</string>
    <string name="app_name" translatable="false">FlixNet</string>
    <string name="err_empty">Error. Empty flieds</string>
    <string name="err_pass">Passwords is not equals</string>
    <string name="err_register">Register Error</string>


    <!-- Nacionalidad -->

    <string-array name="arr_paises">
        <item>Spain</item>
        <item>France</item>
        <item>United Kingdom</item>
        <item>Italy</item>
        <item>Germany</item>
        <item>United States</item>
    </string-array>

    <string name="RegOk">Registered!</string>
    <string name="noReg">Register cancelled!</string>
    <string name="log_ok">Correct login!</string>
    <string name="log_nok">Incorrect login</string>


</resources>