<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="343dp"
            android:layout_height="128dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/flixnet_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- campo EMAIL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegisterLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- campo NOMBRE -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameRegisterLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailRegisterLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- campo APELLIDOS -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameRegisterLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellidos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameRegisterLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regSurname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- campo CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegisterLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surnameRegisterLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- campo CONF.CONTRASEÑA -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmRegisterLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confiPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRegisterLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPassConfirm"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- SPINNER: NACIONALIDAD -->
        <Spinner
            android:id="@+id/regNacionalidad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmRegisterLayout" />

        <!-- REGISTER button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/regBtnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/label_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regNacionalidad" />

        <!-- CANCEL button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/regBtnCancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regBtnRegister"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

    <!--
    android:entries="@array/arr_paises"
    -->